<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/map" />

    <item
        android:id="@+id/navigation_data"
        android:icon="@drawable/ic_poll_black_24dp"
        android:title="@string/data" />

    <item
        android:id="@+id/navigation_properties"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/properties" />
<!--
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_applications_black_24dp"
        android:title="@string/settings" />
-->
</menu>
